# business-requirements-agent

./: .gitignore  AGENTICS_PLAN.md  README.md  SECURITY.md  VERCEL_DEPLOY.md  package-lock.json  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: brd-creator.agent.md
.github/skills/brd-gathering/: SKILL.md
.github/skills/brd-structuring/: SKILL.md
brd-app/: README.md  index.js  package.json  server.js
brd-app/lib/: agentPayload.js  agentReply.js
brd-app/public/: app.js  index.html  style.css
brd-app/public/stitch-dashboard/: code.html
brd-app/test/: agentPayload.bun.test.js  agentPayload.test.js  agentReply.node.test.js
vscode-extension/: .eslintrc.js  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: dashboard.html
vscode-extension/src/: extension.ts
